Experience in about done. Tech icons and skills need work

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html {
   --line-color: #e5e7eb;
 }
@@ -11,6 +10,7 @@ html {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --icon-color: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
